--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: tech-talk-web
-        image: 243060292047.dkr.ecr.eu-west-1.amazonaws.com/tech-talk:$IMAGE_TAG
+        image: 243060292047.dkr.ecr.eu-west-1.amazonaws.com/tech-talk:#IMAGE_TAG
         imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
